manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"frontend-service","namespace":"lugx"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"frontend"},"type":"ClusterIP"}}
  creationTimestamp: "2025-07-27T04:37:14Z"
  name: frontend-service
  namespace: lugx
  resourceVersion: "448367"
  uid: 071a89bf-f777-4419-84d9-f834f21da731
spec:
  clusterIP: 10.152.183.138
  clusterIPs:
  - 10.152.183.138
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend
    version: blue
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
